15/10/2012 change align.pedigree call argument hint= to hints= for besthint.R
17/01/2012 keep setGeneric("%*%"), rename BDSmatrix_%_%.R as bdsmatrix.%_%.R
16/01/2012 revise for an error reported by Prof Brian Ripley
02/12/2011 new plot.pedigree function with x,y in order of individuals in the input
	   replace print with packageStartupMessage() in .onLoad
06/06/2011 hook up kinship.pdf and releasep.pdf
25/08/2009 replace \ldots with \dots in function arguments of coxme, plot.pedigree,
	   solve.bdsmatrix/solve.gchol/solve.gchol.bdsmatrix
30/12/2008 test of plot.pedigree under Linux R 2.8.1 so add requirement for this version
25/12/2008 apply a patch to alignped4 as suggested by Stuart Horswell <stuart.horswell@csc.mrc.ac.uk>
	   modify plot.pedigree to accommodate plotting of twins
	   recall releasep.pdf to inst/doc
24/12/2008 tac dated changes and toggle Imports/Depentds for methods in DESCRIPTION/NAMESPACE
10/06/2008 change max(affected)>min(affected) in pedigree() according to Liping Hou [houliping@gmail.com]
09/06/2008 add importFrom() as suggested by CRAN check
14/04/2008 restore methods in DESCRIPTION
12/04/2008 change Sint to int as in coxmeS.h, so coxme works on Linux 64
11/04/2008 remove SaveImage from CRAN warning and drop methods from Depends
19/02/2008 an updated documentation from http://mayoresearch.mayo.edu/mayo/research/biostat/upload/kinship.pdf
13/12/2207 update align.pedigree.s, autohint.s, check.hint.s from S by Terry Therneau for baboon.pre from Jinliang Wang
22/10/2007 change License to GPL (>=2) following Kurt Hornik's e-mail
07/06/2007 add affected==2 in !all(affected=0 | affected==1) of plot.pedigree
31/05/2007 add Wald test for fixed effects in print.lmekin as suggested by Qiong Yang
30/05/2007 export S3 methods in NAMESPACE, change sys.frame(sys.parents()) back to sys.parent() in coxme and lmekin
24/05/2007 change match.call(expand=F) to match.call(expand.dots=F)